fixes to section headers on mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -2387,7 +2387,7 @@ footer {
         margin-top: 5px;
     }
     .contact-title1 {
-        font-size: 2.4rem;
+        font-size: 2.25rem;
     }
     .contact-title2 {
         font-size: 2.4rem;
